--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
     "react-date-range": "^1.0.3",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sweetalert2": "^9.17.1"
   }
 }
