--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "date-fns": "^2.15.0",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
+    "multer": "^1.4.2",
     "next": "^9.5.1",
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
