--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
-    "next": "^9.5.1",
+    "next": "^9.4.1-canary.5",
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "nprogress": "^0.2.0",
@@ -31,6 +31,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-date-range": "^1.0.3",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "sweetalert2": "^9.17.1"
   }
 }
